gitlab/gitlab-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab
spec:
  entryPoints:
    - websecure
    - web
    - web-external
    - websecure-external
  routes:
  - match: Host(`gitlab.local`)
    kind: Rule
    services:
    - name: gitlab
      port: 80
#  tls:
#    certResolver: default   # or your cert resolver
